# proof-aggregation

./: .gitignore  Cargo.toml  README.md
codex-plonky2-circuits/: .gitignore  Cargo.toml  README.md
codex-plonky2-circuits/benches/: prove_cells.rs  safe_circuit.rs  sample_cells.rs
codex-plonky2-circuits/src/: error.rs  lib.rs  serialization.rs
codex-plonky2-circuits/src/bn254_wrapper/: config.rs  mod.rs  poseidon_bn254.rs  poseidon_bn254_constants.rs  wrap.rs
codex-plonky2-circuits/src/bundle/: mod.rs
codex-plonky2-circuits/src/circuit_helper/: mod.rs
codex-plonky2-circuits/src/circuit_trait/: mod.rs
codex-plonky2-circuits/src/circuits/: capped_tree_circuit.rs  keyed_compress.rs  merkle_circuit.rs  merkle_tree_circuit.rs  mod.rs  params.rs  prove_single_cell.rs  recursion.rs  safe_tree_circuit.rs  sample_cells.rs  serialization.rs  sponge.rs  utils.rs
codex-plonky2-circuits/src/merkle_tree/: capped_tree.rs  merkle_safe.rs  mod.rs
codex-plonky2-circuits/src/proof_input/: gen_input.rs  json.rs  mod.rs  test_params.rs
codex-plonky2-circuits/src/recursion/: compress.rs  cyclic_recursion.rs  dummy_gen.rs  inner_circuit.rs  leaf.rs  leaf_circuit.rs  mod.rs  node.rs  params.rs  pi_verifier.rs  sampling.rs  sampling_inner_circuit.rs  simple_recursion.rs  simple_recursion2.rs  simple_tree_recursion.rs  traits.rs  tree.rs  tree_recursion.rs  tree_recursion2.rs  utils.rs
codex-plonky2-circuits/src/recursion/circuits/: inner_circuit.rs  leaf_circuit.rs  mod.rs  sampling_inner_circuit.rs
codex-plonky2-circuits/src/recursion/cyclic/: mod.rs
codex-plonky2-circuits/src/recursion/hybrid/: mod.rs  tree_circuit.rs
codex-plonky2-circuits/src/recursion/simple/: mod.rs  simple_recursion.rs  simple_tree_recursion.rs
codex-plonky2-circuits/src/recursion/tree1/: mod.rs  node_circuit.rs  tree_circuit.rs  tree_recursion.rs
codex-plonky2-circuits/src/recursion/tree2/: dummy_gen.rs  leaf_circuit.rs  mod.rs  node_circuit.rs  tree_circuit.rs  tree_recursion2.rs  utils.rs
codex-plonky2-circuits/src/recursion/uniform/: compress.rs  leaf.rs  mod.rs  node.rs  pi_verifier.rs  tree.rs
codex-plonky2-circuits/src/recursion/utils/: dummy_gen.rs  mod.rs
codex-plonky2-circuits/src/tests/: merkle_circuit.rs  mod.rs
gnark-wrapper/: .gitignore  README.md  circuit.go  cli.go  compile.sh  go.mod  go.sum  params.sh  prove.sh  prover.go  run_gnark_cli.sh  test.sh  verifier.go  verify.sh
gnark-wrapper/testdata/dummy/: common_circuit_data.json  proof_with_public_inputs.json  verifier_only_circuit_data.json
goldibear_experiments/: README.md
goldibear_experiments/codex-plonky2-circuits/: Cargo.toml
goldibear_experiments/codex-plonky2-circuits/src/: error.rs  lib.rs
goldibear_experiments/codex-plonky2-circuits/src/circuits/: keyed_compress.rs  merkle_circuit.rs  params.rs  sample_cells.rs  sponge.rs  utils.rs
goldibear_experiments/proof-input/: Cargo.toml
goldibear_experiments/proof-input/benches/: sample_cells.rs
goldibear_experiments/proof-input/src/: data_structs.rs  gen_input.rs  lib.rs  params.rs  sponge.rs  utils.rs
goldibear_experiments/proof-input/src/merkle_tree/: key_compress.rs  merkle_safe.rs  mod.rs
plonky2-monolith/: Cargo.toml  README.md
plonky2-monolith/benches/: base_proof.rs
plonky2-monolith/src/gates/: base_sum_custom.rs  gadget.rs  mod.rs
plonky2_poseidon2/: BENCHMARKS.md  Cargo.toml  README.md
plonky2_poseidon2/benches/: poseidon2_perm.rs
plonky2_poseidon2/src/: lib.rs
plonky2_poseidon2/src/gate/: poseidon2.rs
plonky2_poseidon2/src/poseidon2_hash/: mod.rs  poseidon2.rs  poseidon2_goldilocks.rs
plonky2_poseidon2/src/serialization/: gate_serialization.rs  generator_serialization.rs  mod.rs
proof-input/: .gitignore  BENCHMARKS.md  Cargo.toml  README.md  input.json  proof_with_pi.json
proof-input/src/: cyclic_recursion.rs  data_structs.rs  gen_input.rs  json.rs  lib.rs  params.rs  simple_recursion.rs  sponge.rs  tree_recursion.rs  utils.rs
proof-input/src/hash/: key_compress.rs  mod.rs  sponge.rs
proof-input/src/input_generator/: data_structs.rs  gen_input.rs  mod.rs  serialization.rs  utils.rs
proof-input/src/merkle_tree/: key_compress.rs  merkle_circuit.rs  merkle_safe.rs  mod.rs  test.rs
proof-input/src/recursion/: cyclic_recursion.rs  hybrid.rs  leaf_test.rs  mod.rs  node_test.rs  simple_recursion.rs  tree1.rs  tree2.rs  tree_recursion1.rs  tree_recursion2.rs  tree_test.rs  uniform.rs  wrap_test.rs
proof-input/src/serialization/: circuit_input.rs  file_paths.rs  json.rs  mod.rs
proof-input/src/tests/: cyclic_recursion.rs  merkle.rs  merkle_circuit.rs  mod.rs  simple_recursion.rs  tree_recursion1.rs  tree_recursion2.rs
proof-input/tests/: key_compress.rs  merkle_tree.rs  sampling.rs  serialization.rs  sponge.rs  tree_circuit.rs
recursion_experiments/: README.md
recursion_experiments/benches/: hybrid_recursion.rs  tree_recursion1.rs  tree_recursion2.rs  uniform_recursion.rs
recursion_experiments/recursion/: mod.rs
recursion_experiments/recursion/circuits/: inner_circuit.rs  mod.rs  (+1 more)
recursion_experiments/tests/: hybrid.rs  simple_tree.rs  tree2.rs  uniform_arch.rs
workflow/: .gitignore  BENCHMARKS.md  Cargo.toml  README.md  RECURSION_BENCHMARKS.md  build_circuit.sh  circ_params.sh  gen_input.sh  input.json  params.sh  prove.sh  prove_and_verify.sh  run_proof.sh
workflow/bench_scripts/: bench_memory.sh  bench_runtime.sh  circ_params.sh
workflow/benches/: compression.rs  cyclic_recursion.rs  hybrid_recursion.rs  merkle_circuit.rs  recursion.rs  safe_circuit.rs  sample_cells.rs  simple_recursion.rs  simple_recursion_hashed_pi.rs  simple_tree_recursion.rs  tree_recursion.rs  tree_recursion1.rs  tree_recursion2.rs  tree_recursion_approach1.rs  tree_recursion_approach2.rs  uniform_recursion.rs
workflow/scripts/: aggregate.sh  build_circuit.sh  circ_params.sh  gen_input.sh  gnark_params.sh  params.sh  prove.sh  prove_and_verify.sh  run_cli.sh  run_gnark_cli.sh  verify.sh
workflow/src/: aggregate.rs  bn254_wrap.rs  build_circ.rs  file_paths.rs  gen_input.rs  main.rs  params.rs  prove.rs  verify.rs
(+16 files in other folders)
