[workspace]
members = ["codex-plonky2-circuits","plonky2_poseidon2","proof-input","workflow"]
resolver = "2"

[workspace.dependencies]
anyhow  = { version = "1.0.89"}
unroll = { version = "0.1.5"}
plonky2 = { version = "1.0.0" }
plonky2_field = { version = "1.0.0" }
plonky2_maybe_rayon = { version = "1.0.0"}
itertools = { version = "0.12.1"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.10"


[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/codex-storage/proof-aggregation"
repository = "https://github.com/codex-storage/proof-aggregation"
keywords = ["cryptography", "SNARK", "plonky2", "Codex"]
categories = ["cryptography"]