[package]
name = "codex-plonky2-circuits"
description = "Codex storage proofs circuits for Plonky2"
authors = ["Mohammed Alghazwi <m.ghazwi@gmail.com>"]
readme = "README.md"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow     = { workplace = true }
unroll = { workplace = true }
serde      = { workplace = true }
serde_json = { workplace = true }
plonky2    = { workplace = true }
plonky2_field = { workplace = true }
thiserror = { workplace = true }
plonky2_poseidon2 = { path = "../plonky2_poseidon2" }
itertools = { workplace = true }
plonky2_maybe_rayon = { workplace = true }
hashbrown = "0.14.5"

[dev-dependencies]
criterion = { version = "0.5.1", default-features = false }
tynm = { version = "0.1.6", default-features = false }

