[package]
name = "codex-plonky2-circuits"
description = "Codex storage proofs circuits for Plonky2"
authors = ["Mohammed Alghazwi <m.ghazwi@gmail.com>"]
readme = "README.md"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow     = { workspace = true }
unroll = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
plonky2    = { workspace = true }
plonky2_field = { workspace = true }
thiserror = { workspace = true }
plonky2_poseidon2 = { path = "../plonky2_poseidon2" }
itertools = { workspace = true }
plonky2_maybe_rayon = { workspace = true }
hashbrown = "0.14.5"

[dev-dependencies]
criterion = { version = "0.5.1", default-features = false }
tynm = { version = "0.1.6", default-features = false }

