[package]
name = "plonky2_poseidon2"
description = "Plonky2 with Poseidon2 hash"
authors = ["Mohammed Alghazwi <m.ghazwi@gmail.com>"]
readme = "README.md"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
unroll = { workspace = true }
plonky2 = { workspace = true , features = ["gate_testing"]}
plonky2_field = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { version = "0.4.20", default-features = false }
jemallocator = "0.5.4"

[dev-dependencies]
criterion = { version = "0.5.1", default-features = false }
tynm = { version = "0.1.6", default-features = false }

[[bench]]
name = "poseidon2_perm"
harness = false
