[package]
name = "proof-input"
description = "proof input generation library"
authors = ["Mohammed Alghazwi <m.ghazwi@gmail.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
plonky2  = { workspace = true }
plonky2_field = { workspace = true }
# --- local ---
plonky2_poseidon2 = { path = "../plonky2_poseidon2" }
codex-plonky2-circuits = { path = "../codex-plonky2-circuits" }
plonky2_monolith = { path = "../plonky2-monolith" }

[features]
default = []
parallel = ["plonky2/parallel"]