[package]
name = "workflow"
description = "workflow of the codex storage proofs"
authors = ["Mohammed Alghazwi <m.ghazwi@gmail.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
plonky2    = { workspace = true }
plonky2_field = { workspace = true }

# --- local ---
plonky2_poseidon2 = { path = "../plonky2_poseidon2" }
codex-plonky2-circuits = { path = "../codex-plonky2-circuits" }
proof-input = { path = "../proof-input" }

[dev-dependencies]
criterion = { version = "0.5.1", default-features = false }
tynm = { version = "0.1.6", default-features = false }

[[bin]]
name = "prove_and_verify"
path = "src/bin/prove_and_verify.rs"

[[bin]]
name = "gen_input"
path = "src/bin/gen_input.rs"

[[bin]]
name = "build_circ"
path = "src/bin/build_circ.rs"

[[bin]]
name = "prove"
path = "src/bin/prove.rs"

[[bench]]
name = "merkle_circuit"
harness = false

[[bench]]
name = "sample_cells"
harness = false

[[bench]]
name = "uniform_recursion"
harness = false