[package]
name = "codex-plonky2-circuits"
description = "Codex storage proofs circuits for Plonky2"
authors = ["Mohammed Alghazwi <m.ghazwi@gmail.com>"]
readme = "README.md"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow     = { version = "1.0.89"}
unroll = { version = "0.1.5"}
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
plonky2    = { git = "https://github.com/telosnetwork/plonky2_goldibear.git"}
plonky2_field = { git = "https://github.com/telosnetwork/plonky2_goldibear.git" }
thiserror = "2.0.10"
itertools = { version = "0.12.1"}
plonky2_maybe_rayon = { git = "https://github.com/telosnetwork/plonky2_goldibear.git" }
hashbrown = "0.14.5"

[dev-dependencies]
criterion = { version = "0.5.1", default-features = false }
tynm = { version = "0.1.6", default-features = false }

